--- a/products.html
+++ b/products.html
@@ -23,6 +23,10 @@
         <p>Food is Medicine, Medicine is Food</p>
     </div>  
 
+     <div class="top-phrase">
+    <p>For it was neither herb, nor mollifying plaster that healed them, but thy word, O Lord, which healeth all things. - Wisdom 16:12</p>
+  </div>
+
     <header class="navbar">
         
         <div class = "logo">
@@ -30,6 +34,12 @@
         </div>
 
         <nav class="nav-links">
+
+             <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fa fa-bars"></i>
+            </label>
+
             <ul>
             <li><a href="index.html" onclick="showPage('index')">Home</a></li>
             <li><a href="products.html" onclick="showPage('products')">Products</a></li>
