--- a/products.html
+++ b/products.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" 
           content="width=device-width, initial-scale=1.0">
-    <title>Responsive Navigation 
-             Bar With Dropdown
-      </title>
+    <title>YMOMAFOODS</title>
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="stylesb.css">
 </head>
