--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     
    
     <div class = "logo">
-            <img src="image/NewLogo.png" alt="Company Name Logo" class = "logo1">
+            <img src="image/YMOMA.png" alt="Company Name Logo" class = "logo1">
             <span class="name">YMOMA</span>
 
         <nav>
