--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,11 @@
     <div class="tagline-container">
         <p>Cibus medicina et medicina cibus est</p>
         <p>உணவே மருந்து, மருந்தே உணவு</p>
-        <p>Food is Medicine, Medicine is Food</p>
+        <!--   <p>Food is Medicine, Medicine is Food</p>  -->
+        <p class="tagline">
+  <span lang="he" class="rtl-text">תזונה נכונה זאת התרופה.תרופה זה האוכל</span>
+  <span lang="en" class="ltr-text">Food is Medicine, Medicine is Food</span>
+</p>
     </div> 
 
     <div class="top-phrase">
