--- a/aboutus.html
+++ b/aboutus.html
@@ -79,7 +79,7 @@
                 <br>
                 <p>The founder's sole objective is to alleviate the suffering and pain endured in one's body, as it starts in the body and crushes the spirit eventually and thereby creating a disease-free world. </p>
                  <br>   
-                    <p>YMoMa Foods is fully owned by Ms Mary Royerr who has worked in different corporate and public offices for close to 20 years as an analyst and a teacher.
+                    <p>YMOMA Foods is fully owned by Ms Mary Royerr who has worked in different corporate and public offices for close to 20 years as an analyst and a teacher.
                         <span id="dots">...</span>
                         <span id="more">
                         
@@ -99,7 +99,7 @@
             <p>As people live longer, it is imperative that we focus on quality of life. Food is a fundamental pillar of quality of life (QoL), influencing every major domain from physical health and mental well-being to social connection and economic stability.
             </p>
             <br>
-            <p> Look no further than YMoMa to satisfy your taste buds without compromising on health and wellness. 
+            <p> Look no further than YMOMA to satisfy your taste buds without compromising on health and wellness. 
             You can eat our foods without worrying about negative effects on health because it's less processed, 
             retaining minerals like iron, magnesium, and potassium, and has a lower glycemic index (GI), 
             leading to slower sugar spikes, making it more beneficial for digestion and blood sugar control, 
@@ -110,8 +110,8 @@
             <article class="grid-item">
                 <h1>Mission</h1>
                 <br>
-                <p>YMoMa Foods will follow the ancient Tamil rule உணவே மருந்து, மருந்தே உணவு which simply translates  to 
-                    Food is Medicine, Medicine is Food. YMoMa foods will concentrate on foods and snacks that will keep people not just healthy but happyily 
+                <p>YMOMA Foods will follow the ancient Tamil rule உணவே மருந்து, மருந்தே உணவு which simply translates  to 
+                    Food is Medicine, Medicine is Food. YMOMA foods will concentrate on foods and snacks that will keep people not just healthy but happyily 
                     satiated. </p>
              <br>
              <p> In a world that never slows down—where meals are rushed, convenience is king, and wellness is too often an afterthought—YMOMA rises with intention. We create uncompromising, nutrient‑rich, minimally processed delights for those who demand more from what they put into their bodies. This is food crafted with integrity, designed for the pace of modern life yet rooted in the values of real nourishment. No shortcuts. No dilution. No compromise. A rebellion against the ordinary.  A new standard for modern nourishment. This is the movement. This is YMOMA.
