--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,7 @@
         <p>உணவே மருந்து, மருந்தே உணவு</p>
         <!--   <p>Food is Medicine, Medicine is Food</p>  -->
         <p class="tagline">
-  <span lang="he" class="rtl-text">תזונה נכונה זאת התרופה.תרופה זה האוכל</span>
-  <span lang="en" class="ltr-text">Food is Medicine, Medicine is Food</span>
+   <span lang="en" class="ltr-text">Food is Medicine, Medicine is Food</span>
 </p>
     </div> 
 
@@ -52,6 +51,7 @@
         </ul>
         
         </div>
+    </div>
     </header>
 
     
