--- a/aboutus.html
+++ b/aboutus.html
@@ -136,7 +136,7 @@
         }
 
     </script>
-
+<!-- The following scrip it for the Read More Button on this page-->
  <script>       
 function myFunction() {
   var dots = document.getElementById("dots");
